--- a/star-signs/styles.css
+++ b/star-signs/styles.css
@@ -3,6 +3,12 @@ html, body {
     margin: 0;
     width: 100%;
     height: 100%;
+
+    font-family: sans-serif;
+}
+
+body {
+    overflow: hidden;
 }
 
 .question {
@@ -20,8 +26,8 @@ html, body {
 
 .question .result {
     position: absolute;
-    top: 345px;
-    left: 229px;
+    top: 220px;
+    left: 179px;
 }
 .question .result {
     display: flex;
@@ -34,7 +40,12 @@ html, body {
 }
 .question .result .icon::after {
     color: white;
-    flex:1
+
+    margin: 35px 210px;
+    font-size: 80px;
+    display: block;
+
+    text-transform: uppercase;
 }
 .question .result[answer="correct"] .icon {
     background-image: url(./assets/correct.png);
@@ -75,33 +86,132 @@ html, body {
     background-image: url(./assets/Zodiac/ARIES/ARIES_04.png);
 }
 
-.question[sign="cancer"] {
+.question[sign="cancer"][stage="1"] {
     background-image: url(./assets/Zodiac/CANCER/CANCER_01.png);
 }
-.question[sign="capricorn"] {
+.question[sign="cancer"][stage="2"] {
+    background-image: url(./assets/Zodiac/CANCER/CANCER_02.png);
+}
+.question[sign="cancer"][stage="3"] {
+    background-image: url(./assets/Zodiac/CANCER/CANCER_03.png);
+}
+.question[sign="cancer"][stage="4"] {
+    background-image: url(./assets/Zodiac/CANCER/CANCER_04.png);
+}
+
+.question[sign="capricornus"][stage="1"] {
     background-image: url(./assets/Zodiac/CAPRICORN/CAPRICORN_01.png);
 }
-.question[sign="gemini"] {
+.question[sign="capricornus"][stage="2"] {
+    background-image: url(./assets/Zodiac/CAPRICORN/CAPRICORN_02.png);
+}
+.question[sign="capricornus"][stage="3"] {
+    background-image: url(./assets/Zodiac/CAPRICORN/CAPRICORN_03.png);
+}
+.question[sign="capricornus"][stage="4"] {
+    background-image: url(./assets/Zodiac/CAPRICORN/CAPRICORN_04.png);
+}
+
+.question[sign="gemini"][stage="1"] {
     background-image: url(./assets/Zodiac/GEMINI/GEMINI_01.png);
 }
-.question[sign="leo"] {
+.question[sign="gemini"][stage="2"] {
+    background-image: url(./assets/Zodiac/GEMINI/GEMINI_02.png);
+}
+.question[sign="gemini"][stage="3"] {
+    background-image: url(./assets/Zodiac/GEMINI/GEMINI_03.png);
+}
+.question[sign="gemini"][stage="4"] {
+    background-image: url(./assets/Zodiac/GEMINI/GEMINI_04.png);
+}
+
+.question[sign="leo"][stage="1"] {
     background-image: url(./assets/Zodiac/LEO/LEO_01.png);
 }
-.question[sign="libra"] {
+.question[sign="leo"][stage="2"] {
+    background-image: url(./assets/Zodiac/LEO/LEO_02.png);
+}
+.question[sign="leo"][stage="3"] {
+    background-image: url(./assets/Zodiac/LEO/LEO_03.png);
+}
+.question[sign="leo"][stage="4"] {
+    background-image: url(./assets/Zodiac/LEO/LEO_04.png);
+}
+
+.question[sign="libra"][stage="1"] {
     background-image: url(./assets/Zodiac/LIBRA/LIBRA_01.png);
 }
-.question[sign="pisces"] {
+.question[sign="libra"][stage="2"] {
+    background-image: url(./assets/Zodiac/LIBRA/LIBRA_02.png);
+}
+.question[sign="libra"][stage="3"] {
+    background-image: url(./assets/Zodiac/LIBRA/LIBRA_03.png);
+}
+.question[sign="libra"][stage="4"] {
+    background-image: url(./assets/Zodiac/LIBRA/LIBRA_04.png);
+}
+
+.question[sign="pisces"][stage="1"] {
     background-image: url(./assets/Zodiac/PISCES/PISCES_01.png);
 }
-.question[sign="sagittarius"] {
+.question[sign="pisces"][stage="2"] {
+    background-image: url(./assets/Zodiac/PISCES/PISCES_02.png);
+}
+.question[sign="pisces"][stage="3"] {
+    background-image: url(./assets/Zodiac/PISCES/PISCES_03.png);
+}
+.question[sign="pisces"][stage="4"] {
+    background-image: url(./assets/Zodiac/PISCES/PISCES_04.png);
+}
+
+.question[sign="sagittarius"][stage="1"] {
     background-image: url(./assets/Zodiac/SAGITTARIUS/SAGITTARIUS_01.png);
 }
-.question[sign="scorpio"] {
+.question[sign="sagittarius"][stage="2"] {
+    background-image: url(./assets/Zodiac/SAGITTARIUS/SAGITTARIUS_02.png);
+}
+.question[sign="sagittarius"][stage="3"] {
+    background-image: url(./assets/Zodiac/SAGITTARIUS/SAGITTARIUS_03.png);
+}
+.question[sign="sagittarius"][stage="4"] {
+    background-image: url(./assets/Zodiac/SAGITTARIUS/SAGITTARIUS_04.png);
+}
+
+.question[sign="scorpius"][stage="1"] {
     background-image: url(./assets/Zodiac/SCORPIO/SCORPIO_01.png);
 }
-.question[sign="taurus"] {
+.question[sign="scorpius"][stage="2"] {
+    background-image: url(./assets/Zodiac/SCORPIO/SCORPIO_02.png);
+}
+.question[sign="scorpius"][stage="3"] {
+    background-image: url(./assets/Zodiac/SCORPIO/SCORPIO_03.png);
+}
+.question[sign="scorpius"][stage="4"] {
+    background-image: url(./assets/Zodiac/SCORPIO/SCORPIO_04.png);
+}
+
+.question[sign="taurus"][stage="1"] {
     background-image: url(./assets/Zodiac/TAURUS/TAURUS_01.png);
 }
-.question[sign="virgo"] {
+.question[sign="taurus"][stage="2"] {
+    background-image: url(./assets/Zodiac/TAURUS/TAURUS_02.png);
+}
+.question[sign="taurus"][stage="3"] {
+    background-image: url(./assets/Zodiac/TAURUS/TAURUS_03.png);
+}
+.question[sign="taurus"][stage="4"] {
+    background-image: url(./assets/Zodiac/TAURUS/TAURUS_04.png);
+}
+
+.question[sign="virgo"][stage="1"] {
     background-image: url(./assets/Zodiac/VIRGO/VIRGO_01.png);
+}
+.question[sign="virgo"][stage="2"] {
+    background-image: url(./assets/Zodiac/VIRGO/VIRGO_02.png);
+}
+.question[sign="virgo"][stage="3"] {
+    background-image: url(./assets/Zodiac/VIRGO/VIRGO_03.png);
+}
+.question[sign="virgo"][stage="4"] {
+    background-image: url(./assets/Zodiac/VIRGO/VIRGO_04.png);
 }
