--- a/star-signs/styles.css
+++ b/star-signs/styles.css
@@ -15,8 +15,18 @@ body {
 }
 
 #name {
-    color: white;
-    font-size: 25px;
+    border: solid;
+    margin-top: 350px;
+    padding: 20px;
+    color: #5278b6;
+    font-size: 55px;
+}
+
+.question .result[answer] #name {
+    border: none;
+}
+.question .result[answer="correct"] #name {
+    border: solid;
 }
 
 .question {
@@ -38,12 +48,12 @@ body {
 }
 .question .result {
     display: flex;
+    flex-direction: column;
 }
 
 .question .result .icon {
     width: 183px;
     height: 183px;
-    flex: 1;
 }
 .question .result .icon::after {
     color: white;
